--- a/main.css
+++ b/main.css
@@ -1,10 +1,9 @@
 * {
-
     font-family: 'DM Serif Text', serif;
     margin: 0;
     padding: 0;
 }
-
+/* Initializng Margins and Paddings of the Page to 0 so baadme it looks consistent */
 .container {
     display: grid;
     grid-template-rows: 140px  1fr;
@@ -17,7 +16,7 @@
     /* background-position: center bottom; */
     height: 100vh;
 }
-
+/* Dividing the Page into two parts for navbar and content */
 .bgimg::after {
     content: ' ';
     position: absolute;
@@ -27,7 +26,7 @@
     left: 0;
     background-color: rgba(0, 0, 0, 0.55);
 }
-
+/* Black hueing the background */
 .navbar {
     position: relative;
     display: flex;
@@ -37,9 +36,8 @@
     background-color: none;
     height: 100px;
     border-bottom: 3px solid rgba(255, 255, 255, 0.35);
-
-
 }
+/* Styling the navigation bar */
 
 .navbar::after {
     background-color: rgba(0, 0, 0, 0);
@@ -50,7 +48,7 @@
     color: white;
     font-weight: 600;
 }
-
+/* Styling the navbar texts and options */
 a {
     text-decoration: none;
     color: white;
@@ -80,6 +78,7 @@ a {
 .nav_links li a:hover {
     border-bottom: 5px solid rgba(255, 255, 255, 1);
 }
+/* Login Link ke styles */
 .user_profile a {
     padding-bottom: 38px;
 }
@@ -99,6 +98,7 @@ a {
     border-bottom: 5px solid rgba(255, 255, 255, 1);
 }
 
+/* Text Stylings */
 .second1 {
     /* display: flex;
     justify-content: center;
@@ -112,29 +112,51 @@ a {
     animation: animate 3s infinite 3s;
 }
 
-.second2 {
-    position: relative;
-    overflow: hidden;
-    /* white-space: nowrap; */
-    font-size: 25px;
-    color: #fff;
-    margin-left: 180px;
-    animation: animate infinite 3s;
-    animation-delay: 6s;
-}
-
-/* .second .second1:nth-child(1){
-    animation-delay: 0;
-}
-.second .second1:nth-child(2){
-    animation-delay: 5s;
-} */
-
+/* Text Ke liye animations */
 @keyframes animate {
     from {
         width: 0;
     }
     to {
         width: 700px;
+    }
+}
+
+/* Media Queries for making the web page responsive */
+@media only screen and (max-width: 768px) {
+    .container {
+        grid-template-rows: 80px 1fr; /* Adjust as needed for smaller screens */
+    }
+
+    .navbar {
+        margin: 0 20px; /* Adjust margins for smaller screens */
+    }
+
+    .options {
+        display: none; /* Hide nav links for smaller screens */
+    }
+
+    .user_profile {
+        margin-right: 20px; /* Adjust margin for smaller screens */
+    }
+
+    .second1 {
+        margin-left: 20px; /* Adjust margin for smaller screens */
+        font-size: 40px; /* Adjust font size for smaller screens */
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .navbar {
+        margin: 0 10px; /* Further adjust margins for even smaller screens */
+    }
+
+    .user_profile {
+        margin-right: 10px; /* Further adjust margin for even smaller screens */
+    }
+
+    .second1 {
+        margin-left: 10px; /* Further adjust margin for even smaller screens */
+        font-size: 30px; /* Further adjust font size for even smaller screens */
     }
 }
