--- a/index.css
+++ b/index.css
@@ -3,6 +3,13 @@
     margin: 0;
     padding: 0;
 }
+html, body {
+    height: 100%;
+}
+
+body {
+    overflow-y: scroll;
+}
 /* Initializng Margins and Paddings of the Page to 0 so baadme it looks consistent */
 .container {
     display: grid;
@@ -112,8 +119,88 @@ a {
     font-size: 60px;
     color: #fff;
     margin-left: 380px;
-    animation: animate 3s infinite 3s;
+    animation: animate 3s /*infinite*/ 3s;
 }
+.scrollable-section {
+    margin: 0;
+    position: relative;
+    align-items: center;
+    background-image: url(static/img/Lovepik_com-400116130-science-and-technology-background-of-artificial-intelligence.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-top: 5px;
+    height: 100vh;
+    color: white;
+}
+/* Dividing the Page into two parts for navbar and content */
+.bgimg2::after {
+    content: ' ';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.55);
+    z-index: 0;
+}
+
+.txt-1{
+    position: relative;
+    top: 80px;
+    left: 20px;
+    font-size: 10vh;
+}
+.txt-2{
+    position: relative;
+    width: 55%;
+    top: 100px;
+    left: 20px;
+    font-size: 3vh;
+}
+
+.video-1 {
+    border-radius: 20px;
+    position: absolute;
+    left: 60%;
+    top: 25%;
+    
+}
+
+
+.features-table {
+    position: absolute;
+    width: 30%;
+    height: 30%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    top: 60%;
+    left: 2%;
+}
+
+.features-table th, .features-table td {
+    border: 1px double white;
+    width: 10px;
+    padding: 10px;
+    text-align: left;
+}
+
+.tick-icon {
+    width: 20px;
+    height: 20px;
+    fill: white;
+    margin-right: 10px;
+}
+
+
+/* Footer Styles */
+.footer {
+    margin-top: 5px;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 10px;
+    text-align: center;
+    color: white;
+}
+
 
 /* Text Ke liye animations */
 @keyframes animate {
@@ -162,4 +249,38 @@ a {
         margin-left: 10px; /* Further adjust margin for even smaller screens */
         font-size: 30px; /* Further adjust font size for even smaller screens */
     }
+}
+@media only screen and (max-width: 768px) {
+    .txt-1 {
+        font-size: 6vw;
+    }
+
+    .txt-2 {
+        font-size: 2.5vw;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .txt-1 {
+        font-size: 7vw;
+    }
+
+    .txt-2 {
+        font-size: 3vw;
+        width: 90%;
+    }
+    .video-1 {
+        top: 40%;
+        left: 8%;
+    }
+    video {
+        height: 20%;
+        width: 90%;
+    }
+
+    .features-table {
+        top: 65%;
+        left: 5%
+    }
+    
 }
