--- a/timeline.css
+++ b/timeline.css
@@ -181,4 +181,10 @@ tr:nth-child(even) {
 .add-research-btn:hover {
     background-color: #45a049;
 }
+
+.canvas {
+    display: flex;
+    justify-self: center;
+    justify-content: space-around;
+}
         
