--- a/login_temp/home.css
+++ b/login_temp/home.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Goldman:wght@400;700&display=swap'); */
 body{
     margin: 0;
     padding: 0;
+    font-family: "DM Serif Text", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 *{
+    font-family: 'DM Serif Text', serif;
     text-decoration: none;
 }
 
@@ -85,6 +91,7 @@ img{
     flex-direction: column;
 }
 .card {
+    color: black;
     max-width: 100%;
     margin-top: 1rem;
     margin-left: 1rem;
@@ -95,9 +102,11 @@ img{
     padding: 1rem;
     box-shadow: 5px 5px 20px grey;
 }
+
   
 .header {
     display: flex;
+    
     align-items: center;
     grid-gap: 1rem;
     gap: 1rem;
@@ -130,11 +139,12 @@ img{
 }
 
 .options{
-    display: inline-flex;
+    display: flex;
+    justify-content: space-between;
     margin-top: 0.5rem;
 }
 
-.read, .edit {
+.read, .edit, .delete, .author {
     border-radius: 0.5rem;
     width: 100%;
     padding: 0.75rem 1.25rem;
@@ -165,6 +175,45 @@ img{
     margin-right: 2rem;
     margin-top: 1rem;
     box-shadow: 5px 5px 20px grey;
+}
+.create-form{
+    height: 100vh;
+    background-color: rgb(36, 36, 36);
+    color: aliceblue;
+    font-family: "DM Serif Text", serif;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: flex-start;
+    justify-items: center;
+    vertical-align: middle;
+    padding-left: 2vw;
+}
+.create-form h1 {
+    display: block;
+}
+textarea {
+    border-radius: 15px;
+    width: 80%;
+}
+input[type="submit"] {
+    display: block;
+    width: 15vw;
+    height: 7vh;
+    margin-top: 5vh;
+    border: none;
+    align-self: center;
+    border-radius: 2vw;
+    cursor: pointer;
+    transition: ease-in 0.15s;
+}
+input[type="submit"]:hover {
+    color: aliceblue;
+    background-color: rgb(36, 36, 36);
+    border: 1px solid aliceblue;
+}
+textarea ,input {
+    border-radius: 2px;
 }
   
 
