--- a/aboutus.css
+++ b/aboutus.css
@@ -1,125 +1,225 @@
-/* Common styles */
-.txt-1 {
+.txt-1{
   position: relative;
   top: 5px;
   left: 20px;
   font-size: 10vh;
 }
-
-.txt-2 {
+.txt-2{
   position: relative;
   width: 55%;
   top: px;
   left: 20px;
   font-size: 3vh;
 }
-
 .video-1 {
   border-radius: 20px;
-  position: absolute;
+  position: relative;
   left: 60%;
   top: 20%;
+  
 }
 
 .features-table {
-  position: absolute;
-  width: 30%;
-  height: 30%;
-  border-collapse: collapse;
-  margin-top: 20px;
-  top: 60%;
-  left: 2%;
+    position: absolute;
+    width: 30%;
+    height: 30%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    top: 60%;
+    left: 2%;
 }
 
-.features-table th,
-.features-table td {
-  border: 1px double white;
-  width: 10px;
-  padding: 10px;
-  text-align: left;
+.features-table th, .features-table td {
+    border: 1px double white;
+    width: 10px;
+    padding: 10px;
+    text-align: left;
 }
 
-.scrollable-section {
-  margin: 0;
-  position: relative;
-  align-items: center;
-  background-image: url(static/img/Lovepik_com-400116130-science-and-technology-background-of-artificial-intelligence.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  margin-top: 5px;
-  height: 100vh;
-  color: white;
+.tick-icon {
+    width: 20px;
+    height: 20px;
+    fill: white;
+    margin-right: 10px;
 }
 
-.bgimg2::after {
-  content: ' ';
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.55);
-  z-index: 0;
+@media only screen and (max-width: 768px) {
+    .txt-1 {
+        font-size: 6vw;
+    }
+
+    .txt-2 {
+        font-size: 2.5vw;
+    }
 }
 
-/* Responsive styles */
-@media only screen and (max-width: 360px) {
-  .txt-1 {
-      font-size: 7vw;
-  }
+@media only screen and (max-width: 480px) {
+    .txt-1 {
+        font-size: 7vw;
+    }
 
-  .txt-2 {
-      font-size: 3vw;
-      width: 90%;
-  }
-
-  .video-1 {
-      top: 35%;
-      left: 8%;
-  }
-
-  video {
-      height: 10%;
-      width: 90%;
-  }
-
-  .features-table {
-      top: 60%;
+    .txt-2 {
+        font-size: 3vw;
+        width: 90%;
+    }
+    .video-1 {
+      top: 29%;
       left: 5%;
-  }
+    }
+    video {
+        height: 20%;
+        width: 90%;
+    }
 
-  .scroll-down-button {
-     
-      visibility: hidden;
-  }
+    .features-table {
+      top: 58%;
+      left: 7%;
+    }
 
-  .button {
-      background: linear-gradient(to right, #9C27B0, #E040FB);
-      border-radius: 20px;
-      outline: none;
-      border: none;
-      display: inline-block;
-      padding: 8px;
-      color: white;
-      text-align: center;
-      cursor: pointer;
-      width: 70%;
-      margin-left: 15%;
-  }
-
-  .button:hover {
-      background-color: #555;
-  }
-
-  .column {
-      width: 100%;
-      display: block;
-      margin-bottom: 20px;
+    #scrollButton{
+      position: absolute;
+      bottom: 20px;
+      right: 35%;
+      background-color: #5ab9e6;
+      color: #fff;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 5px;
+      display: none;
+      
   }
 
   img {
-      height: auto;
-      width: 100%;
-      border-radius: 15px;
+    border-radius: 15px;;
+    height: 23.3rem;
+    margin-left: 23px;
+    margin-top: 13px;
   }
+
+   
+}
+
+.scrollable-section {
+    margin: 0;
+    position: relative;
+    align-items: center;
+    background-image: url(static/img/Lovepik_com-400116130-science-and-technology-background-of-artificial-intelligence.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-top: 5px;
+    height: 100vh;
+    color: white;
+}
+/* Dividing the Page into two parts for navbar and content */
+.bgimg2::after {
+    content: ' ';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.55);
+    z-index: 0;
+}
+
+
+
+  html {
+    box-sizing: border-box;
+  }
+
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
+
+  .column {
+    float: left;
+    width: 25%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+
+  .card {
+
+    border-radius: 20px;
+    box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+    margin: 8px;
+    background-color: white;
+  }
+  img {
+    border-radius: 15px;;
+    height: 23.3rem;
+  }
+
+  .about-section {
+
+    padding: 50px;
+    text-align: center;
+    background-color: #474e5d;
+    color: white;
+  }
+
+  .container {
+    padding: 0 16px;
+  }
+
+  .container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  .title {
+    color: grey;
+  }
+
+  .button {
+    background: linear-gradient(to right, #9C27B0, #E040FB);
+    border-radius: 20px;
+    outline: none;
+    border: none;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    text-align: center;
+    cursor: pointer;
+    width: 40%;
+    margin-left: 30%;
+  }
+
+  .button:hover {
+    background-color: #555;
+  }
+
+  .link{
+      text-decoration: none;
+      color: white;
+  }
+  .link:hover{
+      color: #E040FB;
+  }
+
+  
+
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+  }
+
+  #scrollButton{
+    position: absolute;
+    bottom: 20px;
+    right: 35%;
+    background-color: #5ab9e6;
+    color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    display: none;
+    
+}
+.scroll-down-button:hover {
+    background-color: #555;
 }
